2000-02-24  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c (key_press_event): Unselect all when moving, inserting
	or deleting stuff.
	(motion_notify_event): Move the insertion cursor where the pointer
	is if the engine is editable.

	* htmlengine-edit-fontstyle.c (merge_safely): New function to
	merge, destroy and update the cursor if necessary.
	(merge_backward): Use it.
	(merge_forward): Likewise.

	* htmlengine-edit-fontstyle.c (merge_backward): Merge with
	`prepend' set to TRUE so that we don't destroy the current object.

	* htmltextmaster.c (merge): Match the new `HTMLText::merge'.

	* htmltext.c (html_text_merge): Match the new `HTMLText::merge'.
	(merge): Likewise.  Added precondition: the two objects must have
	the same type.

	* htmltext.h: New arg `prepend' to `HTMLText::merge'.  Take a
	single object instead of a list as a parameter.

2000-02-23  Ettore Perazzoli  <ettore@helixcode.com>

	* htmllinktextmaster.c (split): Rewritten to use
	`html_text_split()'.

	* htmltextmaster.c (split): Rewritten to use `html_text_split()'.

	* htmltext.c (split): Instead of creating the new item with
	`html_text_master_new()', use `g_malloc()' and the `size' member
	in the class description struct; then initialize with
	`html_text_master_init()'.  This way, it's easier to derive the
	method in the subclass.

2000-02-22  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit-fontstyle.c (merge_forward): Do not to attempt
	to merge with elements that are not of the same type.
	(merge_backward): Likewise.

2000-02-22 Elliot Lee  <sopwith@redhat.com>

	* htmlimageinput.c, htmllinktext.c, htmlselect.c, htmlsettings.c,
	  htmltable.c, htmltextarea.c: #include <string.h>

2000-02-22  Ettore Perazzoli  <ettore@helixcode.com>

	* gtkhtml.c (key_press_event): Do not update styles if the
	keypress was not handled.
	(update_styles): Kick me.

	* htmlengine-edit-fontstyle.c
	(html_engine_get_current_insertion_font_style): A