@@ -1,5 +1,16 @@
 2000-02-24  Ettore Perazzoli  <ettore@helixcode.com>
 
+	* gtkhtml.c (button_release_event): If ending a selection, update
+	the style status.
+
+	* htmlengine-edit-fontstyle.c
+	(get_font_style_from_selection_forall): New helper function.
+	(get_font_style_from_selection): New helper function; it
+	calculates the attributes to display in the editor when a region
+	is selected.
+	(html_engine_get_current_insertion_font_style): Use it when we
+	have an active selection.
+
 	* gtkhtml.c (key_press_event): Unselect all when moving, inserting
 	or deleting stuff.
 	(motion_notify_event): Move the insertion cursor where the pointer
